--- a/ablums/package.json
+++ b/ablums/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "native-base": "^2.3.6",
     "react": "16.0.0",
     "react-native": "0.51.0"
   },
